--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    
 </head>
 <body>
     <div class="container">
         <h2>Contact Us</h2>
-        <form>
+        <form id="the-form" novalidate>
             <div class="form-group">
                 <label for="sender-name">Your name</label>
                 <input type="text" id="sender-name" name="sender-name" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="email">Your Email Address</label>
+                <span id="error-email-message" class="error float-right"></span>
                 <input type="email" id="email" name="email" class="form-control" required>
             </div>
             <div class="form-group">
@@ -30,6 +31,6 @@
             </div>
         </form>
     </div>
-
+    <script src="formval.js"></script>
 </body>
 </html>
