--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <label for="email">Your Email Address</label>
                 <span id="error-email-message" class="error float-right"></span>
-                <input type="email" id="email" name="email" class="form-control" required>
+                <input type="email" id="email" name="email" class="form-control" date-error-element="#error-email-message" required>   
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
