--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
             <div class="form-group">
                 <label for="email">Your Email Address</label>
                 <span id="error-email-message" class="error float-right"></span>
-                <input type="email" id="email" name="email" class="form-control" date-error-element="#error-email-message" required>   
+                <input type="email" id="email" name="email" class="form-control"
+                 data-error-element="#error-email-message"
+                 data-error-typeMismatch="Please enter a valid email address."
+                 data-error-valueMissing="Please enter your email address."
+                 required>   
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
