--- a/public/index.html
+++ b/public/index.html
@@ -12,28 +12,38 @@
 <body>
     <div class="container">
         <h2>Contact Us</h2>
-        <form id="the-form" novalidate>
+        <form id="the-form" novalidate data-formval>
             <div class="form-group">
-                <label for="sender-name">Your name</label>
-                <input type="text" id="sender-name" name="sender-name" class="form-control" required>
+                <label for="sender-name">Your Name</label>
+                <span id="error-name-message" class="error float-right"></span>
+                <input type="text" id="sender-name" name="sender-name" 
+                    class="form-control" 
+                    data-error-element="#error-name-message"
+                    data-error-valueMissing="Please enter your name."
+                    required>
             </div>
             <div class="form-group">
                 <label for="email">Your Email Address</label>
                 <span id="error-email-message" class="error float-right"></span>
                 <input type="email" id="email" name="email" class="form-control"
-                 data-error-element="#error-email-message"
-                 data-error-typeMismatch="Please enter a valid email address."
-                 data-error-valueMissing="Please enter your email address."
-                 required>   
+                    data-error-element="#error-email-message"
+                    data-error-typeMismatch="Please enter a valid email address."
+                    data-error-valueMissing="Please enter your email address."
+                    required>
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea name="message" id="message" class="form-control" required></textarea>
+                <span id="error-message-message" class="error float-right"></span>
+                <textarea name="message" id="message" class="form-control" 
+                    data-error-element="#error-message-message"
+                    data-error-valueMissing="Please enter your message."
+                    required></textarea>
             </div>
-            <div class="from-group">
+            <div class="form-group">
                 <button class="btn btn-primary">Send Message</button>
             </div>
         </form>
+
     </div>
     <script src="formval.js"></script>
 </body>
